@@ -485,12 +485,6 @@ name|proxyPort
 decl_stmt|;
 specifier|private
 name|String
-name|proxyRealm
-init|=
-literal|null
-decl_stmt|;
-specifier|private
-name|String
 name|proxyHost
 init|=
 literal|null
@@ -529,16 +523,6 @@ name|void
 name|configureProxy
 parameter_list|()
 block|{
-name|proxyRealm
-operator|=
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"http.auth.ntlm.domain"
-argument_list|)
-expr_stmt|;
-comment|// no equivalent for realm in jdk proxy support ?
 name|proxyHost
 operator|=
 name|System
@@ -1745,19 +1729,11 @@ operator|.
 name|ANY_REALM
 argument_list|)
 argument_list|,
-operator|new
-name|NTCredentials
+name|createCredentials
 argument_list|(
 name|proxyUserName
 argument_list|,
 name|proxyPasswd
-argument_list|,
-name|HostUtil
-operator|.
-name|getLocalHostName
-argument_list|()
-argument_list|,
-name|proxyRealm
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1781,15 +1757,7 @@ name|getIvyVersion
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-if|if
-condition|(
-name|useAuthentication
-argument_list|(
-name|url
-argument_list|)
-condition|)
-block|{
+comment|// authentication
 name|httpClient
 operator|.
 name|getParams
@@ -2347,8 +2315,7 @@ literal|null
 condition|)
 block|{
 return|return
-operator|new
-name|NTCredentials
+name|createCredentials
 argument_list|(
 name|c
 operator|.
@@ -2359,16 +2326,6 @@ name|c
 operator|.
 name|getPasswd
 argument_list|()
-argument_list|,
-name|HostUtil
-operator|.
-name|getLocalHostName
-argument_list|()
-argument_list|,
-name|c
-operator|.
-name|getRealm
-argument_list|()
 argument_list|)
 return|;
 block|}
@@ -2376,6 +2333,99 @@ return|return
 literal|null
 return|;
 block|}
+block|}
+specifier|private
+specifier|static
+name|Credentials
+name|createCredentials
+parameter_list|(
+name|String
+name|username
+parameter_list|,
+name|String
+name|password
+parameter_list|)
+block|{
+name|String
+name|user
+decl_stmt|;
+name|String
+name|domain
+decl_stmt|;
+name|int
+name|backslashIndex
+init|=
+name|username
+operator|.
+name|indexOf
+argument_list|(
+literal|'\\'
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|backslashIndex
+operator|>=
+literal|0
+condition|)
+block|{
+name|user
+operator|=
+name|username
+operator|.
+name|substring
+argument_list|(
+name|backslashIndex
+operator|+
+literal|1
+argument_list|)
+expr_stmt|;
+name|domain
+operator|=
+name|username
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|backslashIndex
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|user
+operator|=
+name|username
+expr_stmt|;
+name|domain
+operator|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"http.auth.ntlm.domain"
+argument_list|,
+literal|""
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+operator|new
+name|NTCredentials
+argument_list|(
+name|user
+argument_list|,
+name|password
+argument_list|,
+name|HostUtil
+operator|.
+name|getLocalHostName
+argument_list|()
+argument_list|,
+name|domain
+argument_list|)
+return|;
 block|}
 block|}
 end_class
